@@ -1,3 +1,14 @@
+2018-09-15  Devin Rousso  <drousso@apple.com>
+
+        Web Inspector: REGRESSION: breakpoint context menu appears twice in DOM tree
+        https://bugs.webkit.org/show_bug.cgi?id=189308
+
+        Reviewed by Joseph Pecoraro.
+
+        * UserInterface/Controllers/DOMBreakpointTreeController.js:
+        (WI.DOMBreakpointTreeController.appendBreakpointContextMenuItems):
+        Set a symbol on the `contextMenu` to ensure that the same items are not added twice.
+
 2018-09-14  Joseph Pecoraro  <pecoraro@apple.com>
 
         Web Inspector: Source View doesn't scroll to show line when breakpoint is hit inside of <script> in HTML resource
